Fixed card image bug on Chrome; still buggy on Firefox

--- a/src/sass/card-image.scss
+++ b/src/sass/card-image.scss
@@ -109,6 +109,11 @@ $drop-shadow-card-shadow: drop-shadow(0 $lhse*.5 $lhse*.75 rgba(#000, .6667));
 		height: 100%;
 		width: auto;
 		max-height: calc(100vh - #{$lhse});
+
+		width: min(#{488px * .6667}, 25vw);
+		max-height: $height-card-image-section;
+		height: auto;
+
 		aspect-ratio: 488 / 680;
 		outline: divide($lhse, 3) dashed rgba($color-text-brighter, .2);
 		outline-offset: -$lhse*.75;
@@ -274,7 +279,7 @@ $drop-shadow-card-shadow: drop-shadow(0 $lhse*.5 $lhse*.75 rgba(#000, .6667));
 	.card-image {
 		z-index: index($layers, app-header);
 
-		.image-overlay-fade {
+		&.image-overlay-fade {
 			&-enter-active,
 			&-leave-active {
 				transition: opacity .25s ease;
@@ -290,9 +295,9 @@ $drop-shadow-card-shadow: drop-shadow(0 $lhse*.5 $lhse*.75 rgba(#000, .6667));
 			max-height: 100%;
 			position: fixed;
 			top: 0;
+			right: 0;
 			bottom: 0;
 			left: 0;
-			right: 0;
 		}
 		.card-placement-outline {
 			display: none;
